--- a/style.css
+++ b/style.css
@@ -67,15 +67,10 @@ header {
     font-weight: 800;
 }
 
-.abs-left {
+.abs {
     position: absolute;
-    z-index: -1;
-    top: -120px;
-    left: 80px;
-}
-
-.abs-right {
-    position: absolute;
+    color: var(--accent);
+    rotate: 3deg;
     z-index: -1;
     top: -120px;
     right: 80px;
@@ -95,27 +90,21 @@ header {
 
 .year {
     position: relative;
-    width: 100vw;
-    margin: 128px 0;
-}
-.year:hover .background {
-    opacity: 1;
+    width: 75vw;
+    box-sizing: border-box;
+    margin: 128px auto;
+    color: #23252a;
+    padding: 48px 0;
+    overflow: visible;
 }
 
-.container {
-    width: 75%;
-    height: 100%;
-    box-sizing: border-box;
-    position: relative;
-    margin: auto;
-    color: #23252a;
-    padding: 64px 0;
+.year:hover .background {
+    opacity: 1;
 }
 
 .background {
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     display: block;
@@ -123,5 +112,4 @@ header {
     opacity: 0.4;
     z-index: -1;
     transition: opacity ease-in 0.2s;
-    border-radius: 32px;
 }
