setup: Use Rust / tinytemplate

--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,7 @@ header a {
     height: 100%;
     display: block;
     background-color: var(--accent);
-    opacity: 0.4;
+    opacity: 0.5;
     z-index: -1;
     transition: opacity ease-in 0.2s;
 }
@@ -180,5 +180,91 @@ header a {
     .year {
         width: 100vw;
         margin: 84px auto;
+    }
+}
+
+.project {
+    padding: 32px 64px;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    font-size: var(--font_body);
+}
+
+#content {
+    display: flex;
+    flex-flow: column;
+    padding: 0 32px;
+}
+
+
+#title {
+    font-size: var(--font_projects);
+    line-height: var(--font_projects);
+    font-weight: 700;
+}
+
+#chips {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    margin: 8px 0 16px 0;
+}
+
+.chip {
+    background-color: rgba(35, 37, 42, 0.2);
+    border-radius: 16px;
+    padding: 4px 8px;
+    margin: 8px 8px 0 0;
+}
+
+#promo {
+    width: 270px;
+    height: 180px;
+    object-fit: cover;
+    opacity: 0.75;
+    transition: opacity ease-in 0.2s;
+    flex-shrink: 0;
+    border-radius: 8px;
+}
+
+.project:hover #promo {
+    opacity: 1;
+}
+
+#description {
+    line-break: auto;
+    box-sizing: border-box;
+    padding-bottom: 16px;
+}
+
+a {
+    color: #23252a;
+    margin-right: 16px;
+}
+
+.arrow {
+    width: 16px;
+    height: 16px;
+    margin-bottom: -3px;
+}
+
+@media screen and (max-width: 920px) {
+    #promo {
+        width: 210px;
+        height: 140px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .project {
+        padding: 32px;
+        flex-flow: column;
+    }
+
+    #promo {
+        width: 270px;
+        height: 180px;
+        margin-bottom: 16px;
     }
 }
