setup: Generate website in `output/`

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content= "width=device-width, initial-scale=1.0">
   <title>yopox</title>
-  <script src="assets/scroll.js"></script>
-  <link rel="stylesheet" href="assets/style.css">
+  <script src="scroll.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
