--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <div id="title">yopox</div>
   <div>software developer @ JetBrains</div>
   <div>game dev hobbyist</div>
-  <div><a rel="me" href="https://mstdn.social/@yopox">—mastodon—</a></div>
+  <div><a rel="me" href="https://rivals.space/@yopox">—mastodon—</a></div>
   <div><a href="https://yopox.itch.io">—itch.io—</a></div>
   <div><a href="https://github.com/yopox">—github—</a></div>
   <div><a href="https://twitch.tv/yopox">—twitch—</a></div>
