--- a/templates/game.html
+++ b/templates/game.html
@@ -1,14 +1,14 @@
 <div class="project">
-  <img id="promo" src="{ name | asset_formatter }">
-  <div id="content">
-    <div id="title">{name}</div>
-    <div id="chips">
+  <img class="promo" src="{ name | asset_formatter }">
+  <div class="content">
+    <div class="title">{name}</div>
+    <div class="chips">
       {{- for tag in tags }}
       <div class="chip">{tag}</div>
       {{- endfor }}
     </div>
-    <div id="description">{description}</div>
-    <div id="links">
+    <div class="description">{description}</div>
+    <div class="links">
       {{- for link in links }}
       <a href="{link.url}">
         <img class="arrow" src="assets/north_east_FILL0_wght400_GRAD0_opsz48.svg">
