style: update the accent color

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 :root {
-    --accent: #c7e7cf;
+    --accent: #f3d97a;
     --font_year: 160px;
     --font_title: 128px;
     --font_projects: 48px;
